--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "Augustokkk",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^6.10.0"
   }
 }
